--- a/src/styles/header/header.css
+++ b/src/styles/header/header.css
@@ -6,8 +6,7 @@
     display: flex;
     align-items: center;
     justify-content: space-around;
-    outline: 1px solid #69788C;
-    background: #070C26;
+    outline: 1px solid #c2c2c2;
   }
   
   .title-page {
@@ -17,7 +16,7 @@
     text-align: center;
     font-family: 'Poppins', sans-serif;
     font-family: 25px;
-    color: #F2F2F2;
+    color: #7a7a7a;
   }
   .nav{
     width: fit-content;
@@ -29,16 +28,17 @@
     justify-content: space-evenly;
     border-radius: 10px;
   }
-  .nickName{
-    padding: 0 10px;
-    font-size: 1.1em;
-    color: #C3D0CF;
+  .menu{
+      display: flex;
+      align-items: center;
+  }
+  .menu label, .menu input{
+    display: none;
   }
   .routes{
     justify-self: center;
     width: 220px;
     height: max-content;
-    background: #5F49F2;
     padding: 3px 15px;
     display: flex;
     justify-content: space-around;
@@ -55,8 +55,8 @@
     padding: 5px 10px;
     text-align: center;
     font-size: 1.1em;
-    color: #F2F2F2;
-    border-right: 1px solid #69788C;
+    color: #343434;
+    border-right: 1px solid #c2c2c2;
     border-radius: 0px;
   }
   .routes a:last-child{
@@ -73,22 +73,39 @@
     border-radius: 10px;
   }
   .container-login> a:first-child{
-    background-color: #07338C;
-    color: #F2F2F2;
+    color: #343434;
     transition: transform 120ms ease-in, box-shadow 120ms ease, margin-rigth 120ms ease-in-out;
   }
   .container-login>A:first-child:hover{
     transform: scale(1.01);
-    box-shadow: 2px 2px 2px #3542b3;
+    box-shadow: 2px 2px 2px #7a7a7a;
     margin-right: 10px;
   }
   .container-login > a:last-child{
-    color: #f2f2f2;
-    outline: 1px solid #5F49F2;
+    color: #343434;
+    outline: 1px solid #7a7a7a;
+    box-shadow: 2px 2px 2px #7a7a7a;
+    transition: box-shadow 120ms ease-in-out;
+  }
+  .container-login > a:last-child:hover{
+    box-shadow: none;
   }
 
   /*Medidas adaptables para telefonos*/
   @media only screen and (max-width: 480px){
+    .menu label{
+      display: block;
+      cursor: pointer;
+      padding: 0 10px;
+      color: #7a7a7a;
+      border-radius: 5px;
+      font-size: 18px;
+    }
+    .menu input:checked + .routes {
+      opacity: 1;
+      height: 45px;
+      align-items: center;
+    }
     .header{
       height: auto;
       flex-direction: column;
@@ -97,13 +114,21 @@
       text-align: center
     }
     .nav{
-      align-self: flex-end;
         border-radius: 0;
         margin: 0;
-        grid-template-columns: repeat(1, 1fr);
+        grid-template-columns: repeat(2, 1fr);
     }
-    .routes{
-        display: none;
+    .routes {
+      height: 0;
+      padding: 5px 5px;
+      opacity: 0;
+      background-color: #f2f2f2;
+      position: absolute;
+      top: 60px;
+      right: 0;
+      z-index: 9;
+      overflow: hidden;
+      transition: opacity 0.3s ease-in-out, height 0.3s ease-in-out;
     }
 
   }
