--- a/src/styles/video/video.css
+++ b/src/styles/video/video.css
@@ -2,8 +2,7 @@ video{
     max-width: 640px;
     height: 360px;
     display: block;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    border: none;
+    box-shadow: 5px 7px 8px rgba(0, 0, 0, 0.3);
     border-radius: 15px;
     margin: 0 0 20px;
 }
