remove start for flex-start

--- a/src/styles/footer/footer.css
+++ b/src/styles/footer/footer.css
@@ -81,7 +81,7 @@ footer{
 .social > a{
     display: flex;
     align-items: center;
-    justify-content: start;
+    justify-content: flex-start;
     gap: 15px;
 }   
 /*Medidas adaptables para telefonos*/
