--- a/src/styles/header/header.css
+++ b/src/styles/header/header.css
@@ -1,141 +1,194 @@
-@import url(../../fonts/fonts.css);
+/*Reusable css*/
 
-  .header {
-    width: 100%;
-    height: 60px;
+.sidebar .text{
+    font-size: 1.em;
+    font-weight: 500;
+    color: var(--text-color);
+    transition: var(--tran-03);
+    white-space: nowrap;
+    opacity: 1;
+}
+
+.sidebar .image{
+    min-width: 60px;
     display: flex;
     align-items: center;
-    justify-content: space-around;
-    outline: 1px solid #c2c2c2;
-  }
-  
-  .title-page {
-    width: auto;
-    margin: 0;
-    padding: 10px 15px;
-    text-align: center;
-    font-family: 'Poppins', sans-serif;
-    font-family: 25px;
-    color: #7a7a7a;
-  }
-  .nav{
-    width: fit-content;
-    height: 50px;
-    display: grid;
-    padding: 0px 10px;
-    grid-template-columns: repeat(2, minmax(120px, 250px));
-    align-items: center;
-    justify-content: space-evenly;
-    border-radius: 10px;
-  }
-  .menu{
-      display: flex;
-      align-items: center;
-  }
-  .menu label, .menu input{
-    display: none;
-  }
-  .routes{
-    justify-self: center;
-    width: 220px;
-    height: max-content;
-    padding: 3px 15px;
-    display: flex;
-    justify-content: space-around;
+}
+
+/*Sidebar*/
+.sidebar{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 250px;
+    height: 100%;
+    padding: 10px 14px;
+    background-color: var(--sidebar-color);
+    transition: var(--tran-05);
+}
+.sidebar.close{
+    width: 65px;
+}.sidebar.close .text{
+    opacity: 0;
+    transition: var(--tran-03);
+}
+.sidebar.close .search-box{
+    width: 60px;
     border-radius: 15px;
-  }
-  a, .nickName{
-    font-family: 'Fanwood', 'Times New Roman', Times, serif;
-  }
-  a{
-    text-decoration: none;
-  }
-  .routes > a{
-    width: 55px;
-    padding: 5px 10px;
-    text-align: center;
-    font-size: 1.1em;
-    color: #343434;
-    border-right: 1px solid #c2c2c2;
-    border-radius: 0px;
-  }
-  .routes a:last-child{
-    border: none;
-  }
-  .container-login{
-    justify-self: end;
-    width: 210px;
+    justify-content: flex-start;
+    overflow: hidden;
+    transition: var(--tran-04);
+}
+.sidebar.close header .toggle{
+    transform: translateY(-50%) rotate(180deg);
+}
+.sidebar ul{
+    padding: 0;
+}
+.sidebar li{
+    height: 50px;
+    margin-top: 10px;
+    list-style: none;
     display: flex;
-    justify-content: space-around;
-  }
-  .container-login > a{
-    padding: 7px 15px;
-    border-radius: 10px;
-  }
-  .container-login> a:first-child{
-    color: #343434;
-    transition: transform 120ms ease-in, box-shadow 120ms ease, margin-rigth 120ms ease-in-out;
-  }
-  .container-login>A:first-child:hover{
-    transform: scale(1.01);
-    box-shadow: 2px 2px 2px #7a7a7a;
-    margin-right: 10px;
-  }
-  .container-login > a:last-child{
-    color: #343434;
-    outline: 1px solid #7a7a7a;
-    box-shadow: 2px 2px 2px #7a7a7a;
-    transition: box-shadow 120ms ease-in-out;
-  }
-  .container-login > a:last-child:hover{
-    box-shadow: none;
-  }
+    align-items: center;
+}
+.sidebar li .icon{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-width: 60px;
+    font-size: 20px;
+}
+.sidebar li .icon, .sidebar li .text{
+    color: var(--text-color);
+    transition: var(--tran-02);
+}
+.sidebar header{
+    position: relative;
+}
+.sidebar .image-text img{
+    width: 40px;
+    border-radius: 6px;
+}
 
-  /*Medidas adaptables para telefonos*/
-  @media only screen and (max-width: 480px){
-    .menu label{
-      display: block;
-      cursor: pointer;
-      padding: 0 10px;
-      color: #7a7a7a;
-      border-radius: 5px;
-      font-size: 18px;
-    }
-    .menu input:checked + .routes {
-      opacity: 1;
-      height: 45px;
-      align-items: center;
-    }
-    .header{
-      height: auto;
-      flex-direction: column;
-    }
-    .title-page{
-      text-align: center
-    }
-    .nav{
-        border-radius: 0;
-        margin: 0;
-        grid-template-columns: repeat(2, 1fr);
-    }
-    .routes {
-      height: 0;
-      padding: 5px 5px;
-      opacity: 0;
-      background-color: #f2f2f2;
-      position: absolute;
-      top: 60px;
-      right: 0;
-      z-index: 9;
-      overflow: hidden;
-      transition: opacity 0.3s ease-in-out, height 0.3s ease-in-out;
-    }
+.sidebar header .image-text{
+    display: flex;
+    align-items: center; 
 
-  }
+}
 
-  /*Medidas adapatables para tabletas*/
-  @media only screen and (min-width: 481px) and (max-width: 768px) {
-    .nav{
-      width: 500px;
-    }
-  }
+header .image-text .header-text{
+    display: flex;
+    flex-direction: column;
+}
+.header-text .name{
+    font-weight: 600;
+}
+.header-text .profession{
+    margin-top: -2px;
+}
+
+.sidebar header .toggle{
+    position: absolute;
+    top: 50%;
+    right: -25px;
+    transform: translateY(-50%);
+    background: var(--primary-color);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+    color: var(--sidebar-color);
+    font-size: 22px;
+    transition: var(--tran-04);
+}
+
+.sidebar .search-box{
+    background: var(--primary-color-ligth);
+    transition: var(--tran-04);
+}
+.search-box input{
+    height: 100%;
+    width: 100%;
+    background: var(--primary-color-ligth);
+    outline: none;
+    border: none;
+    border-radius: 6px;
+    margin: 0;
+}
+.sidebar li a{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+    border-radius: 6px;
+    transition: var(--tran-04);
+}
+
+.sidebar li a:hover{
+    background: var(--primary-color);
+}
+.sidebar li a:hover .icon, .sidebar li a:hover .text{
+    color: var(--sidebar-color);
+}
+
+
+.sidebar .menu-bar{
+    height: 720px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.menu-bar .mode{
+    position: relative;
+    border-radius: 6px;
+    background: var(--primary-color-ligth);
+}
+.menu-bar .mode .moon-sun{
+    height: 50px;
+    width: 50px;
+    display: flex;
+    align-items: center;
+
+}
+.menu-bar .mode i{
+    position: absolute;
+}
+.menu-bar .mode i.sun{
+    opacity: 0;
+}
+.menu-bar .mode  .toggle-switch{
+    position: absolute;
+    right: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    min-width: 50px;
+    border-radius: 50px;
+    cursor: pointer;
+    background: var(--primary-color-ligth);
+}
+
+.toggle-switch .switch{
+    position: relative;
+    height: 22px;
+    width: 44px;
+    border-radius: 25px;
+    background: var(--toggle-color);
+}
+.switch::before{
+    content: '';
+    position: absolute;
+    height: 15px;
+    width: 15px;
+    border-radius: 50%;
+    top: 50%;
+    left: 5px;
+    transform: translateY(-50%);
+    transition: var(--tran-03);
+    background: var(--sidebar-color);
+}
+
