--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -10,10 +10,30 @@ body, html{
 
 .container{
     width: 100%;
-    height: 100vh;
+    height: auto;
     background-color: var(--body-color);
     transition: var(--tran-02);
+    margin: 0;
+    overflow: hidden;
 }
+.dash{
+    margin: 0;
+    height: 100vh;
+    width: calc(100%-250px);
+    position: relative;
+    top: 0;
+    left: 280px;
+    transition: var(--tran-05);
+}
+.dash h1{
+   margin: 0 12px;
+   color: var(--text-color);
+}
+.sidebar.close + .dash{
+    width: calc(100% - 88px);
+    left: 100px;
+}
+
 .container.dark{
     --body-color: #18191A;
     --sidebar-color: #242526;
